--- a/insights/zero-trust-cloud-architecture.html
+++ b/insights/zero-trust-cloud-architecture.html
@@ -196,14 +196,14 @@ The question worth asking is not "do we have Zero Trust tools?" It is "does our 
 </blockquote>
 
 <p>
-<em>What is your experience with Zero Trust in enterprise environments? I am particularly interested in how organizations are handling identity consolidation and workload identity governance, as these are the two areas where I consistently see the largest gap between intent and implementation. Connect with me on <a href="https://linkedin.com/in/sankum" target="_blank" rel="noopener">LinkedIn</a> or reach out directly.</em>
+<em>What is your experience with Zero Trust in enterprise environments? I am particularly interested in how organizations are handling identity consolidation and workload identity governance, as these are the two areas where I consistently see the largest gap between intent and implementation. Connect with me on <a href="https://linkedin.com/in/sankum-chandra" target="_blank" rel="noopener">LinkedIn</a> or reach out directly.</em>
 </p>
 
 <hr style="margin:50px 0; opacity:0.2;">
 <nav id="articleNav" style="display:flex; justify-content:space-between; gap:20px;"></nav>
 
 <script>
-fetch('../data/insights.json')
+fetch('../data/articles.json')
   .then(res => res.json())
   .then(articles => {
     const currentPath = window.location.pathname.split('/').pop();
